# cpp_resources

./: CMakeLists.txt  _PathForPreparing.md  make_board.sh  update.bat
.github/workflows/: cmake-multi-platform.yml
GenericAlgorithm/: ga.cpp
Socket/Socket/: ContentView.swift  SocketApp.swift
Socket/Socket.xcodeproj/: project.pbxproj
Socket/Socket.xcodeproj/project.xcworkspace/xcuserdata/tpn.xcuserdatad/: UserInterfaceState.xcuserstate
Socket/SocketTests/: SocketTests.swift
Socket/SocketUITests/: SocketUITests.swift  SocketUITestsLaunchTests.swift
_cube_/: Makefile  main.cpp  screen.h
_glib_gtest_/: CMakeLists.txt  main.cpp  maximunCostOfLaptop.cpp  test.cc
_graph_model/: CMakeLists.txt
_mandelbrot_/: Makefile  main.cpp
_pattern_design/PatternDesign/PatternDesign/: main.cpp
_pattern_design/PatternDesign/PatternDesign.xcodeproj/: project.pbxproj
_pattern_design/PatternDesign/PatternDesign.xcodeproj/project.xcworkspace/xcuserdata/tpn.xcuserdatad/: UserInterfaceState.xcuserstate
_pattern_design/PatternDesign/PatternDesign.xcodeproj/xcuserdata/tpn.xcuserdatad/xcschemes/: xcschememanagement.plist
_pattern_design/_proxy/: CMakeLists.txt  Makefile
_pattern_design/_proxy/Models/: CMakeLists.txt
_pattern_design/_proxy/Models/src/: Logger.cpp
_pattern_design/_proxy/Service/: CMakeLists.txt  Service.hpp  ServiceProxy.hpp
_pattern_design/_proxy/Service/inc/: Service.h  ServiceProxy.h
_pattern_design/_proxy/Service/src/: ServiceProxy.cpp
_pattern_design/_proxy/Setting/: CMakeLists.txt  main.cpp  main.s  setting
_pattern_design/_proxy/Sockets/inc/: SocketService.h
_pattern_design/_proxy/Sockets/src/: SocketService.cpp
_pattern_design/_proxy/template/: ApplicationOne.hpp  ApplicationTwo.hpp
_pattern_design/_singleton/: FirstApplication.hpp
_proxy/: main.cpp
_proxy/Common/: CMakeLists.txt  Variables.hpp
_proxy/Models/: Logger.hpp
_proxy/Models/inc/: Logger.h  Timer.h
_proxy/Models/src/: Timer.cpp
_proxy/Service/: Makefile  main.cpp
_proxy/Service/src/: Service.cpp
_proxy/Setting/: Makefile  main.cpp  setting
_proxy/Sockets/: CMakeLists.txt  Socket.hpp  SocketService.hpp
_proxy/template/: Interface.hpp  Proxy.hpp  Service.hpp
_singleton/: Interface.hpp  Makefile  SecondApplication.hpp  singleton.cpp
_snake_/: Makefile  main.cpp
_solving/: CMakeLists.txt  README.md
_solving/_code_learn/: CMakeLists.txt  questionQuery.cpp
_solving/_code_signal/: CMakeLists.txt
_solving/_code_signal/_examples/: CMakeLists.txt  main.cpp
_solving/_code_signal/_include/: Core.h  Intro.h  common.h  supportedFunction.h
_solving/_code_signal/_src/: Core.cpp
_solving/_hacker_rank/: CMakeLists.txt
_solving/_hacker_rank/_basic_c/: main.c
_solving/_hacker_rank/examples/: CMakeLists.txt  main.cpp
_solving/_hacker_rank/include/: arrayProblems.h  common.h  math.hpp
_solving/_hacker_rank/preparation_kit/: main_day_1.c
_solving/_hacker_rank/src/: arrayProblems.cpp
_solving/_leet_code/: CMakeLists.txt
_solving/_leet_code/examples/: CMakeLists.txt  main.cpp
_solving/_leet_code/include/: common.h  data.h  easyLevel.h  hardLevel.h  mediumLevel.h
_solving/_leet_code/src/: easyLevel.cpp  hardLevel.cpp  mediumLevel.cpp
_trained/Class/String/: String.cpp  String.h  main.cpp
_trained/Fun/: Student_Management.cpp
_trained/Logger/: Logger.cpp
_trained/Matrix/: Matrix.cpp  Matrix.h  main.cpp
_trained/Module/: CMakeLists.txt  ContentProvider.cpp  ContentProvider.h  FileManifest.cpp  FileManifest.h  Logger.cpp  SQLManagement.cpp  SQLManagement.h  config.cfg  main.cpp  readme.md
_trained/Module/lib/: Logger.h  SQLManagement.cpp  SQLManagement.h
_trained/SOCKET_LINUX/: Client.cpp  Server.cpp  client  server  simple_read  simple_read.cpp
_trained/SOCKET_LINUX/sortArray/: Client.c  Server.c
_trained/Shape/: Shape.cpp  data.txt  log_file.txt
_trained/SingleLinkedList/: singleLinkedList.cpp
_trained/SmartPointer/: main.cpp  sharedPtr.h  weakPtr.h
_trained/StudentMana/: stuMana.cpp
_trained/WorkingWithSQLITE/WorkingSQLITE_OOP/: Menu.cpp  Menu.h  SQLITE_OOP.cpp  mSQLITE.cpp  mSQLITE.h  salesManTable.cpp  salesManTable.h
_trained/WorkingWithSQLITE/saleManagement/: Makefile  Menu.cpp  Menu.h  SQLITE.cpp  SQLITE.h  main.cpp  myDB.db
_trained/dLinkedlist/: input.txt  main.cpp  readme.txt  template.cpp
asynchronous/: CMakeLists.txt  build.sh  demo_app  demo_app.c  demo_app_mul_sum  demo_app_mul_sum.c  demo_app_single_threaded_concurrent.c  demo_thread.cpp  event_loop.c  event_loop.h  loop_event.cpp  singleton.cpp
